# triply

./: .gitignore  AI_TRIPS_SUMMARY.md  FLUTTER_SUPABASE_INTEGRATION.md  README.md  TESTING_CHECKLIST.md  main.dart  pubspec.yaml  splash_config.yaml  tree.txt
android/: build.gradle  local.properties.  settings.gradle
iconly-animation-export-1765479693/: ai_chat_for_all.json  calendar.json  mapforsearch.json
integration_test/: app_flow_test.dart
lib/: main.dart
linux/: CMakeLists.txt
supabase/: DATABASE_SCHEMA.md  DATABASE_SETUP.md  QUICK_START.md  test_queries.sql
test/: widget_test.dart
triply-api-python/: .gitignore  README.md  pyproject.toml  railway.toml  requirements.txt
triply-api-python/src/: __init__.py  main.py
triply-api-python/src/agents/: __init__.py  state.py  trip_agent.py
triply-api-python/src/agents/multi_agent/: __init__.py  modification_agent.py  orchestrator.py  places_agent.py  query_analyzer.py  restaurant_agent.py  state.py  validator_agent.py
triply-api-python/src/config/: settings.py
triply-api-python/src/logging/: __init__.py  logger.py  middleware.py
triply-api-python/src/schemas/: __init__.py  place.py  trip.py
triply-api-python/src/tools/: __init__.py  google_places.py  web_search.py
triply-web/: next.config.ts  package-lock.json  package.json
triply-workers/: .dockerignore  .env.example  .gitignore  ACTIVITY_PROMPTS_README.md  ARCHITECTURE.md  CHECK_AND_FIX.md  CURRENT_ARCHITECTURE.md  Dockerfile  FLEXIBLE_AI_GUIDE.md  README.md  RUN_TWO_CITIES_GENERATION.md  check-barcelona-poi-categories.ts  check-beach-trip.ts  (+35 more)
(+484 files in other folders)
